<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.example</groupId>
    <artifactId>LTW_project_servlet</artifactId>
    <packaging>war</packaging>
    <properties>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <version>1.0-SNAPSHOT</version>
    <name>LTW_project_servlet Maven Webapp</name>
    <url>http://maven.apache.org</url>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/javax.servlet/jsp-api -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/jstl/jstl -->
        <dependency>
            <groupId>jstl</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.json/json -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.jdbi/jdbi3-core -->
        <dependency>
            <groupId>org.jdbi</groupId>
            <artifactId>jdbi3-core</artifactId>
            <version>3.40.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.2.0</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.15</version>
        </dependency>

        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.json/json -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>

        <!--Ckfinder 2 lib local-->
        <dependency>
            <groupId>system.activation</groupId>
            <artifactId>activation</artifactId>
            <version>1.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/activation-1.1.jar</systemPath>
        </dependency>
        <dependency>

            <groupId>system.ckfinder</groupId>
            <artifactId>ckfinder</artifactId>
            <version>2.6.2.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/CKFinder-2.6.2.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.CKFinderPlugin-FileEditor</groupId>
            <artifactId>CKFinderPlugin-FileEditor</artifactId>
            <version>2.6.2.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/CKFinderPlugin-FileEditor-2.6.2.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.CKFinderPlugin-ImageResize</groupId>
            <artifactId>CKFinderPlugin-ImageResize</artifactId>
            <version>2.6.2.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/CKFinderPlugin-ImageResize-2.6.2.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.CKFinderPlugin-Watermark</groupId>
            <artifactId>CKFinderPlugin-Watermark</artifactId>
            <version>2.6.2.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/CKFinderPlugin-Watermark-2.6.2.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.2.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/commons-fileupload-1.2.2.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.0.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/commons-io-2.0.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/gson-2.5.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>system.jboss-logging</groupId>
            <artifactId>jboss-logging</artifactId>
            <version>3.1.4.GA</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/jboss-logging-3.1.4.GA.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.jboss-vfs</groupId>
            <artifactId>jboss-vfs</artifactId>
            <version>3.2.11.Final</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/jboss-vfs-3.2.11.Final.jar</systemPath>
        </dependency>

        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>mail-1.4.1</artifactId>
            <version>1.4.1</version>
            <systemPath>${basedir}/lib/mail-1.4.1.jar</systemPath>
            <scope>system</scope>
        </dependency>
        <dependency>
            <groupId>system.thumbnailator</groupId>
            <artifactId>thumbnailator</artifactId>
            <version>0.4.8</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/thumbnailator-0.4.8.jar</systemPath>
        </dependency>
    </dependencies>

    <build>
        <finalName>LTW_project_servlet</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>14</source>
                    <target>14</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>